--- a/anvil_project_manager/templates/anvil_project_manager/managedgroup_form.html
+++ b/anvil_project_manager/templates/anvil_project_manager/managedgroup_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}New Group{% endblock title %}
+{% block title %}New Managed Group{% endblock title %}
 
 {% block content %}
   <form method="post">
