--- a/anvil_project_manager/templates/anvil_project_manager/managedgroup_confirm_delete.html
+++ b/anvil_project_manager/templates/anvil_project_manager/managedgroup_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Remove Group{% endblock %}
+{% block title %}Remove Managed Group{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -10,7 +10,7 @@
     <div class="col-sm-12">
 
 
-      <h2>Remove Group</h2>
+      <h2>Remove Managed Group</h2>
 
       <h2>{{ object }}</h2>
 
