--- a/anvil_project_manager/templates/anvil_project_manager/managedgroupgroupmembership_detail.html
+++ b/anvil_project_manager/templates/anvil_project_manager/managedgroupgroupmembership_detail.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Group Group membership: {{ object }}{% endblock %}
+{% block title %}Managed Group Group membership: {{ object }}{% endblock %}
 
 {% block content %}
 
 
-<h2>Group Group Membership Details</h2>
+<h2>Managed Group Group Membership Details</h2>
 <div class="my-3 p-3 bg-light border rounded shadow-sm">
 <ul>
     <li>Parent group: <a href="{{object.parent_group.get_absolute_url}}"> {{ object.parent_group}} </a></li>
