Revert "Rename membership models to ManagedGroup..."
This reverts commit c5cd0578a343c63bd65b30a2981604f029aa0a26.

I renamed the Group model to ManagedGroup because Group is used
elsewhere in Django. Renaming the GroupGroupMembership and
GroupAccountMembership to include Managed in the name makes them
longer, and is also implicit since they're part of this app. Revert
this commit for now.

--- a/anvil_project_manager/templates/anvil_project_manager/groupaccountmembership_form.html
+++ b/anvil_project_manager/templates/anvil_project_manager/groupaccountmembership_form.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}New Managed Group Group Membership{% endblock title %}
+{% block title %}New Group Account Membership{% endblock title %}
 
 {% block content %}
 
-  <h2>New Managed Group Group Membership</h2>
+  <h2>New Group Account Membership</h2>
 
   <form method="post">
     {% csrf_token %}
