--- a/anvil_project_manager/templates/anvil_project_manager/groupgroupmembership_form.html
+++ b/anvil_project_manager/templates/anvil_project_manager/groupgroupmembership_form.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}New Managed Group Account Membership{% endblock title %}
+{% block title %}New Group Group Membership{% endblock title %}
 
 {% block content %}
 
-  <h2>New Managed Group Account Membership</h2>
+  <h2>New Group Group Membership</h2>
 
   <form method="post">
     {% csrf_token %}
