--- a/anvil_project_manager/templates/anvil_project_manager/groupgroupmembership_update.html
+++ b/anvil_project_manager/templates/anvil_project_manager/groupgroupmembership_update.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Modify Managed Group Group Membership{% endblock title %}
+{% block title %}Modify Group Group Membership{% endblock title %}
 
 {% block content %}
 
-  <h2>Modify Managed Group Group Membership Role</h2>
+  <h2>Modify Group Group Membership Role</h2>
 
   <ul>
     <li>Parent group: {{ object.parent_group }}</li>
