--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
@@ -42,7 +42,7 @@
 </div>
 
 <p>
-  <a href="{% url 'anvil_project_manager:accounts:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete from app</a>
+  <a href="{% url 'anvil_consortium_manager:accounts:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete from app</a>
 </p>
 
 {% endblock content %}
