--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupgroupmembership_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupgroupmembership_detail.html
@@ -16,7 +16,7 @@
 </div>
 
 <p>
-  <a href="{% url 'anvil_project_manager:group_group_membership:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
+  <a href="{% url 'anvil_consortium_manager:group_group_membership:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
 </p>
 
 {% endblock content %}
