--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupaccess_list.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupaccess_list.html
@@ -3,7 +3,7 @@
 
 {% load render_table from django_tables2 %}
 
-{% block title %}Group Group memberships{% endblock %}
+{% block title %}Workspace Group Access{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col-sm-12">
 
-      <h2>Group Group memberships</h2>
+      <h2>Workspace Group Access</h2>
 
       {% render_table table %}
 
@@ -20,6 +20,6 @@
 
 </div>
 
-<p><a class="btn btn-secondary" href="{% url 'anvil_project_manager:group_group_membership:new' %}" role="button">Add a group to a group</a></p>
+<p><a class="btn btn-secondary" href="{% url 'anvil_consortium_manager:workspace_group_access:new' %}" role="button">Give a group access to a workspace</a></p>
 
 {% endblock content %}
