Use new app name in documentation and examples

--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{% block title %}example_site{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Django app to manage AnVIL workspace permissions">
+    <meta name="description" content="Django app to manage consortium resources on AnVIL">
     <meta name="author" content="Adrienne Stilp">
 
     <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
@@ -152,8 +152,8 @@
       <section class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="fw-light">AnVIL Project Manager</h1>
-            <p class="lead text-muted">With this app, you can manage workspaces, groups, and data access on <a href="https://anvilproject.org/">the AnVIL</a>.</p>
+            <h1 class="fw-light">AnVIL Consortium Manager</h1>
+            <p class="lead text-muted">With this app, you can manage <a href="https://anvilproject.org/">AnVIL</a> workspaces, groups, and data access associated with a Consortium.</p>
           </div>
         </div>
       </section>
