Setup a login view
Use the django auth login views by adding them to the urls file.
Add a template for the login page and link to the view in the
navbar.

--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -140,7 +140,7 @@
               {% else %}
                 {# show login #}
                 <li class="nav-item">
-                  <a class="nav-link" href="#"><span class="fa-solid fa-right-to-bracket"></span> Login<a>
+                  <a class="nav-link" href="{% url 'login' %}"><span class="fa-solid fa-right-to-bracket"></span> Login<a>
                 </li>
               {% endif %}
             </ul>
