--- a/example_site/templates/registration/login.html
+++ b/example_site/templates/registration/login.html
@@ -7,6 +7,9 @@
   {% csrf_token %}
   {{ form|crispy }}
   <button type="submit" class="btn btn-primary">Login</button>
+  <a href="{% url 'password_reset' %}" class="btn btn-secondary" role="button">
+  Forgot password?</a>
+
 </form>
 
 {% endblock %}
