--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
@@ -46,6 +46,7 @@
 
 <p>
   <a href="{% url 'anvil_consortium_manager:accounts:deactivate' pk=object.pk %}" class="btn btn-secondary" role="button">Deactivate account</a>
+  <a href="{% url 'anvil_consortium_manager:accounts:reactivate' pk=object.pk %}" class="btn btn-secondary" role="button">Reactivate account</a>
   <a href="{% url 'anvil_consortium_manager:accounts:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete from app</a>
 </p>
 
