--- a/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
@@ -71,13 +71,28 @@
       <h2 class="accordion-header" id="headingMembersTwo">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMembersTwo" aria-expanded="false" aria-controls="collapseMembersTwo">
           <span class="fa-solid fa-user-group mx-2"></span>
-          View account members
-          <span class="badge mx-2 bg-secondary pill"> {{ account_table.rows|length }}</span>
+          View active account members
+          <span class="badge mx-2 bg-secondary pill"> {{ active_account_table.rows|length }}</span>
         </button>
       </h2>
       <div id="collapseMembersTwo" class="accordion-collapse collapse" aria-labelledby="headingMembersTwo">
         <div class="accordion-body">
-          {% render_table account_table %}
+          {% render_table active_account_table %}
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingMembersThree">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMembersThree" aria-expanded="false" aria-controls="collapseMembersTwo">
+          <span class="fa-solid fa-users-slash mx-2"></span>
+          View inactive account members
+          <span class="badge mx-2 bg-secondary pill"> {{ inactive_account_table.rows|length }}</span>
+        </button>
+      </h2>
+      <div id="collapseMembersThree" class="accordion-collapse collapse" aria-labelledby="headingMembersThree">
+        <div class="accordion-body">
+          {% render_table inactive_account_table %}
         </div>
       </div>
     </div>
