Show different components on template based on Account status
Modify the context data to indicate if an account is inactive and
if the reactivate or deactivate buttons should be shown. Modify the
template to use these flags to 1) selectively show an alert if an
account is inactive and 2) show the proper deactivate/reactivate
buttons based on status (only active accounts should show the
deactivate button and only inactive accounts should show the
reactivate button).

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
@@ -16,13 +16,18 @@
   <span class="badge bg-primary">User account</span>
 {% endif %}
 
+{% if is_inactive %}
+  <div class="my-3 alert alert-dark" role="alert">
+  This account is inactive. It has been removed from all groups on AnVIL, but a record of previous group membership is still stored in this app.
+  </div>
+{% endif %}
+
 <div class="my-3 p-3 bg-light border rounded shadow-sm">
   <ul>
     <li>Email: {{ object.email }}</li>
     <li>Status: {{ object.status }}</li>
   </ul>
 </div>
-
 
 <div class="my-3">
   <div class="accordion" id="accordionGroups">
@@ -45,8 +50,14 @@
 
 
 <p>
-  <a href="{% url 'anvil_consortium_manager:accounts:deactivate' pk=object.pk %}" class="btn btn-secondary" role="button">Deactivate account</a>
-  <a href="{% url 'anvil_consortium_manager:accounts:reactivate' pk=object.pk %}" class="btn btn-secondary" role="button">Reactivate account</a>
+  {% if show_deactivate_button %}
+    <a href="{% url 'anvil_consortium_manager:accounts:deactivate' pk=object.pk %}" class="btn btn-secondary" role="button">Deactivate account</a>
+  {% endif %}
+
+  {% if show_reactivate_button %}
+    <a href="{% url 'anvil_consortium_manager:accounts:reactivate' pk=object.pk %}" class="btn btn-secondary" role="button">Reactivate account</a>
+  {% endif %}
+
   <a href="{% url 'anvil_consortium_manager:accounts:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete from app</a>
 </p>
 
