--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_confirm_deactivate.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_confirm_deactivate.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% load render_table from django_tables2 %}
+
 {% block title %}Remove Account{% endblock %}
 
 {% block content %}
@@ -14,7 +16,32 @@
 
       <h2>{{ object }}</h2>
 
-      <p>Are you sure you want to deactivate <a href="{{ object.get_absolute_url }}">{{ object }}</a> in this app?</p>
+      <p>
+        Deactivating an account will remove it from all groups on AnVIL, but will still store the record of its previous groups in this app.
+      </p>
+
+      <div class="my-3">
+        <div class="accordion" id="accordionGroups">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingGroupsOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGroupsOne" aria-expanded="false" aria-controls="collapseGroupsOne">
+                <span class="fa-solid fa-user-group mx-2"></span>
+                See groups
+                <span class="badge mx-2 bg-secondary pill"> {{ group_table.rows|length }}</span>
+              </button>
+            </h2>
+            <div id="collapseGroupsOne" class="accordion-collapse collapse" aria-labelledby="headingGroupsOne" data-bs-parent="#accordionGroups">
+              <div class="accordion-body">
+                {% render_table group_table %}
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <p>
+        Are you sure you want to deactivate <a href="{{ object.get_absolute_url }}">{{ object }}</a> in this app?
+      </p>
 
       <form method="POST">{% csrf_token %}
           {{ form }}
