--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupgroupmembership_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupgroupmembership_detail.html
@@ -12,6 +12,8 @@
     <li>Parent group: <a href="{{object.parent_group.get_absolute_url}}"> {{ object.parent_group}} </a></li>
     <li>Child group: <a href="{{object.child_group.get_absolute_url}}"> {{ object.child_group}} </a></li>
     <li>Role: {{ object.role }}</li>
+    <li>Date added: {{ object.created }}</li>
+    <li>Date modified: {{ object.modified }}</li>
   </ul>
 </div>
 
