--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -20,6 +20,8 @@
   <ul>
     <li>Workspace: {{ object }}</li>
     <li>Billing project: {{ object.billing_project }}</li>
+    <li>Date added: {{ object.created }}</li>
+    <li>Date modified: {{ object.modified }}</li>
   </ul>
 </div>
 
