--- a/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_detail.html
@@ -18,6 +18,8 @@
 <div class="my-3 p-3 bg-light border rounded shadow-sm">
   <ul>
     <li>Name: {{ object.name }}</li>
+    <li>Date added: {{ object.created }}</li>
+    <li>Date modified: {{ object.modified }}</li>
   </ul>
 </div>
 
