--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_detail.html
@@ -11,6 +11,8 @@
     <li>Group: <a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></li>
     <li>Account: <a href="{{object.account.get_absolute_url}}"> {{ object.account}} </a></li>
     <li>Role: {{ object.role }}</li>
+    <li>Date added: {{ object.created }}</li>
+    <li>Date modified: {{ object.modified }}</li>
   </ul>
 </div>
 
