Namespace templates for app

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_confirm_delete.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "anvil_consortium_manager/base.html" %}
 {% load static %}
 
 {% block title %}Remove Account{% endblock %}
