--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupaccess_form.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupaccess_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "anvil_consortium_manager/base.html" %}
 {% load crispy_forms_tags %}
 
 {% block title %}New Workspace Group Access{% endblock title %}
