--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupaccess_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupaccess_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "anvil_consortium_manager/base.html" %}
 {% load static %}
 
 {% block title %}Workspace group access: {{ object }}{% endblock %}
