Add navbar block and separate navbar source file

--- a/example_site/templates/pages/home.html
+++ b/example_site/templates/pages/home.html
@@ -39,6 +39,29 @@
 
   <body>
 
+    {% block navbar %}
+    <div class="mb-1">
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="{% url 'anvil_consortium_manager:index' %}">Example site</a>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'anvil_consortium_manager:index' %}">Demo</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+
+    {% endblock navbar %}
+
     <div class="container">
 
       {% if messages %}
