Properly close <a> tags in navbar login/logout html

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -91,17 +91,18 @@
           </li>
         </ul>
 
+
         <!-- Login links -->
-        <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
+        <ul class="navbar-nav  mb-2 ms-md-auto">
           {% if request.user.is_authenticated %}
             {# show logout #}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}"><span class="fa-solid fa-right-from-bracket"></span> Logout {{ user.username }}<a>
+              <a class="nav-link" href="{% url 'logout' %}"><span class="fa-solid fa-right-from-bracket"></span> Logout {{ user.username }}</a>
             </li>
           {% else %}
             {# show login #}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}"><span class="fa-solid fa-right-to-bracket"></span> Login<a>
+              <a class="nav-link" href="{% url 'login' %}"><span class="fa-solid fa-right-to-bracket"></span> Login</a>
             </li>
           {% endif %}
         </ul>
