--- a/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
@@ -9,7 +9,7 @@
 <h1 class="pb-2 border-bottom">AnVIL Consortium Manager</h1>
 
 
-<div class="album py-5 bg-light">
+<div class="album py-2">
   <div class="container">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
