--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupaccess_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupaccess_detail.html
@@ -12,6 +12,7 @@
     <li>Group: <a href="{{object.group.get_absolute_url}}"> {{ object.group}} </a></li>
     <li>Workspace: <a href="{{object.workspace.get_absolute_url}}"> {{ object.workspace}} </a></li>
     <li>Access: {{ object.access }}</li>
+    <li>Can compute: {{ object.can_compute }}</li>
     <li>Date added: {{ object.created }}</li>
     <li>Date modified: {{ object.modified }}</li>
   </ul>
