--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_form.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_form.html
@@ -1,4 +1,5 @@
 {% extends "anvil_consortium_manager/base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% block title %}New Group Account Membership{% endblock title %}
@@ -12,4 +13,11 @@
     {{ form|crispy }}
     <button type="submit" class="btn btn-success">Save membership</button>
   </form>
-{% endblock %}
+
+{% endblock content %}
+
+{% block inline_javascript %}
+  {# script for django-autocomplete-light #}
+  <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+  {{ form.media }}
+{% endblock inline_javascript %}
