Use autocomplete to select auth domains when creating a Workspace

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_form.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_form.html
@@ -1,4 +1,5 @@
 {% extends "anvil_consortium_manager/base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% block title %}New Workspace{% endblock title %}
@@ -10,3 +11,9 @@
     <button type="submit" class="btn btn-success">Save workspace</button>
   </form>
 {% endblock %}
+
+{% block inline_javascript %}
+  {# script for django-autocomplete-light #}
+  <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+  {{ form.media }}
+{% endblock inline_javascript %}
