Optionally display a workspace data form when creating a workspace
If specified in the adapter, include a workspace data form along
with the workspace form when creating a workspace. Use the
django-extra-views package to process the extra form as an inline.
Add django-extra-views to the requirements files

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_form.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_form.html
@@ -6,8 +6,15 @@
 
 {% block content %}
   <form method="post">
+
     {% csrf_token %}
+
+    {% for formset in inlines %}
+      {{ formset|crispy }}
+    {% endfor %}
+
     {{ form|crispy }}
+
     <button type="submit" class="btn btn-success">Save workspace</button>
   </form>
 {% endblock %}
