Stop using django-extra-views for workspace data handling
Instead of using django-extra-views to handle extra forms associated
with a workspace, just override some methods of the FormView (and
use FormView instead of CreateView for WorkspaceCreate). This is a
little more straightforward and there is enough custom processing
that just using FormView instead of CreateView is ok.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_form.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_form.html
@@ -9,10 +9,7 @@
 
     {% csrf_token %}
 
-    {% for formset in inlines %}
-      {{ formset|crispy }}
-    {% endfor %}
-
+    {{ workspace_data_form|crispy }}
     {{ form|crispy }}
 
     <button type="submit" class="btn btn-success">Save workspace</button>
