--- a/anvil_consortium_manager/templates/anvil_consortium_manager/base.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/base.html
@@ -13,6 +13,7 @@
 
     {% block css %}
     <!-- Latest compiled and minified Bootstrap CSS -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Your stuff: Third-party CSS libraries go here -->
