Add an abstract base model and default model for workspace data
Add an abstract base model that projects extending this app can
inherit to create their custom WorkspaceData model. As part of this,
to make the app work without having to customize it, add a
DefaultWorkspaceData model in the main app. Unfortunately this
creates an extra table (for DefaultWorkspaceData) and field
(workspace.defaultworkspacedata) if a project is implementing a
custom workspace data model. Not sure if this is the best way to do
this, or if we should just require projects implementing the app to
create their own WorkspaceData model and not provide a default.

Update docs to reflect these changes.

--- a/example_site/templates/anvil_consortium_manager/workspace_detail.html
+++ b/example_site/templates/anvil_consortium_manager/workspace_detail.html
@@ -3,8 +3,8 @@
 {% block workspace_data %}
 <div class="my-3 p-3 bg-light border rounded shadow-sm">
   <ul>
-    <li>Study: {{ object.workspacedata.study_name }}</li>
-    <li>Consent: {{ object.workspacedata.consent_code }}</li>
+    <li>Study: {{ object.exampleworkspacedata.study_name }}</li>
+    <li>Consent: {{ object.exampleworkspacedata.consent_code }}</li>
   </ul>
 </div>
 {% endblock workspace_data %}
