Use an inline formset for workspace data instead of a second form

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_form.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_form.html
@@ -8,8 +8,7 @@
   <form method="post">
 
     {% csrf_token %}
-
-    {{ workspace_data_form|crispy }}
+    {{ workspace_data_formset|crispy }}
     {{ form|crispy }}
 
     <button type="submit" class="btn btn-success">Save workspace</button>
