--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_import.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_import.html
@@ -8,7 +8,7 @@
 {% block content %}
   <form method="post">
     {% csrf_token %}
-    {{ workspace_data_form|crispy }}
+    {{ workspace_data_formset|crispy }}
     {{ form|crispy }}
     <button type="submit" class="btn btn-success">Import workspace</button>
   </form>
