--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_detail.html
@@ -17,7 +17,7 @@
 </div>
 
 <p>
-  <a href="{% url 'anvil_consortium_manager:group_account_membership:delete' pk=object.pk %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
+  <a href="{% url 'anvil_consortium_manager:group_account_membership:delete' group_slug=object.group.name account_uuid=object.account.uuid %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
 </p>
 
 {% endblock content %}
