Update WorkspaceCreate to use the adapter registry
Pass the workspace type to create as a url parameter, then look
up the correct adapter in the registry using that paramter. Add a
mixin to handle this looking and set an instance variable for the
adapter. Modify the view to use the mixin and get the adapter from
the registry. Modify tests as necessary. As a side effect, I had to
remove the workspace dropdown from the navbar because the previous
"new" url was no longer valid without passing a workspace type. In
the long run we'll need to add some way of getting the registered
workspace adapters for use in the navbar and other templates.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
@@ -93,6 +93,10 @@
         </div>
       </div>
 
+      {% comment %}
+
+      This won't work yet because we need to get the list of the types of workspaces. Possibly with a template tag?
+
       <div class="col">
         <div class="card shadow-sm">
           <h5 class="card-header"><span class="fa-solid fa-computer mx-2"></span>Workspaces</h5>
@@ -119,6 +123,8 @@
           </ul>
         </div>
       </div>
+
+      {% endcomment %}
 
     </div>
   </div>
