--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -70,31 +70,32 @@
             </ul>
           </li>
 
-          {% comment %}
-            This won't work because of new url parameters. Figure out how to get a list of workspace types. Possibly a template tag?
-
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Workspaces
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-              <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:list' %}">List workspaces</a>
-              </li>
-              <li>
-                {# <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:new' %}">Add a workspace</a> #}
-              </li>
-              <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:import' %}">Import a workspace from AnVIL</a>
-              </li>
+
+              {% for workspace_type, workspace_name in registered_workspaces.items %}
+                <li class="dropdown-item"><b>{{ workspace_name }}s</b>
+                <li>
+                  <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:list' workspace_type %}">List workspaces</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:new' workspace_type %}">Create a new workspace</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:import' workspace_type %}">Import a workspace from AnVIL</a>
+                </li>
+                <li><hr class="dropdown-divider"></li>
+                </li>
+              {% endfor %}
+
               <li>
                 <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspace_group_access:list' %}">Workspace access</a>
               </li>
             </ul>
           </li>
-
-        {% endcomment %}
-
 
         </ul>
 
@@ -119,5 +120,6 @@
   </nav>
 
 </div>
+
 
 {% endblock navbar %}
