--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -1,15 +1,17 @@
-{% block navbar %}
+  <nav class="navbar navbar-expand-md">
+    <div class="container">
 
-<div class="mb-1">
-  <nav class="navbar navbar-expand-md navbar-light bg-light">
-    <div class="container-fluid">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <a class="navbar-brand" href="{% url 'anvil_consortium_manager:index' %}">AnVIL Consortium Manager</a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
         <ul class="navbar-nav mr-auto">
+
+          {% block anvil_consortium_manager_nav_items %}
 
           <li class="nav-item">
               <a class="nav-link" href="{% url 'anvil_consortium_manager:status' %}">AnVIL status</a>
@@ -96,29 +98,10 @@
             </ul>
           </li>
 
-        </ul>
+          {% endblock anvil_consortium_manager_nav_items %}
 
-
-        <!-- Login links -->
-        <ul class="navbar-nav  mb-2 ms-md-auto">
-          {% if request.user.is_authenticated %}
-            {# show logout #}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}"><span class="fa-solid fa-right-from-bracket"></span> Logout {{ user.username }}</a>
-            </li>
-          {% else %}
-            {# show login #}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}"><span class="fa-solid fa-right-to-bracket"></span> Login</a>
-            </li>
-          {% endif %}
         </ul>
 
       </div>
     </div>
   </nav>
-
-</div>
-
-
-{% endblock navbar %}
