--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -39,6 +39,31 @@
 
   <body>
 
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'anvil_consortium_manager:index' %}">Demo site</a>
+
+        <!-- Login links -->
+        <ul class="navbar-nav  mb-2 ms-md-auto">
+          {% if request.user.is_authenticated %}
+            {# show logout #}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'logout' %}"><span class="fa-solid fa-right-from-bracket"></span> Logout {{ user.username }}</a>
+            </li>
+          {% else %}
+            {# show login #}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}"><span class="fa-solid fa-right-to-bracket"></span> Login</a>
+            </li>
+          {% endif %}
+        </ul>
+
+      </div>
+    </nav>
+
+    {% block extra_navbar %}
+    {% endblock extra_navbar %}
+
     <div class="container">
 
       {% if messages %}
